--- a/_dev/src/scss/layouts/_layout.scss
+++ b/_dev/src/scss/layouts/_layout.scss
@@ -6,7 +6,7 @@ $e: "#ua";
   // Default BO theme layout fix
   padding-inline-end: 5px;
 
-  &:is(:not(.v1-7-8-0):not(.v1-7-3-0)) {
+  &:not(.v1-7-8-0):not(.v1-7-3-0) {
     padding-inline-end: 0;
   }
 }
